@@ -7,3 +7,4 @@ POTFILES
 cat-id-tbl.c
 gimp.pot
 stamp-cat-id
+messages
